@@ -36,28 +36,24 @@ my $cleanup = ($tmp eq "--clean") ? 1 : 0;
 
 my $dist = "";
 my $arch = "";
-my $file = "";
+my $series = "debian/patches/series";
 
-$cleanup && do {
-  $file = shift;
-  1;
-} || do {
+$cleanup || do {
   $dist = $tmp;
   $arch = shift;
-  $file = shift;
 };
 
 $cleanup && do {
-  (-e "$file.in") && do unlink($file);
+  (-e "$series.in") && do unlink($series);
   exit(0);
 };
 
-open(I, "$file.in") || do {
-  print STDERR "Can't open $file.in: $!\n";
+open(I, "$series.in") || do {
+  print STDERR "Can't open $series.in: $!\n";
   exit(1);
 };
-open(O, "> $file.new") || do {
-  print STDERR "Can't open $file.new: $!\n";
+open(O, "> $series.new") || do {
+  print STDERR "Can't open $series.new: $!\n";
   exit(1);
 };
 my $line;
@@ -97,8 +93,8 @@ while (defined ($line = <I>)) {
 }
 close I;
 close O;
-rename "$file.new", $file or do {
-  print "Can't rename $file.new to $file: $!\n";
+rename "$series.new", $series or do {
+  print "Can't rename $series.new to $series: $!\n";
   exit(1);
 };
 exit(0);
