@@ -2,21 +2,15 @@
 
 use strict;
 use warnings;
-use Cwd;
 
 my $moz_supported_file;
 my $lpom_dir;
-my $op_dir;
-my $bl_file;
 
 my %blacklist;
 my %locale2pkgname;
 my %languages;
 
 my %pkglist;
-
-my $dir=getcwd;
-chomp($dir);
 
 my $file;
 
@@ -26,10 +20,6 @@ while (@ARGV) {
         $moz_supported_file = shift(@ARGV);
     } elsif ($arg eq '-l') {
         $lpom_dir = shift(@ARGV);
-    } elsif ($arg eq '-o') {
-        $op_dir = shift(@ARGV);
-    } elsif ($arg eq '-b') {
-        $bl_file = shift(@ARGV);
     } else {
         die "Unknown argument '$arg'";
     }
@@ -44,10 +34,8 @@ if (defined($lpom_dir)) {
 
     open($file, $lang_file) or die "Failed to open $lang_file";
     while (<$file>) {
-        my $line = $_;
-        chomp($line);
-        my $langcode = $line;
-        my $lang = $line;
+        chomp($_);
+        my $langcode = my $lang = $_;
         $langcode =~ s/([^:]*):*([^:]*)/$1/;
         $lang =~ s/([^:]*):*([^:]*)/$2/;
         if ($lang ne "") { $languages{$langcode} = $lang; }
@@ -56,10 +44,8 @@ if (defined($lpom_dir)) {
 
     open($file, $map_file) or die "Failed to open $map_file";
     while (<$file>) {
-        my $line = $_;
-        chomp($line);
-        my $langcode = $line;
-        my $pkgname = $line;
+        chomp($_);
+        my $langcode = my $pkgname = $_;
         $langcode =~ s/([^:]*):*([^:]*)/$1/;
         $pkgname =~ s/([^:]*):*([^:]*)/$2/;
         if ($pkgname ne "") { $locale2pkgname{$langcode} = $pkgname; }
@@ -68,10 +54,8 @@ if (defined($lpom_dir)) {
 
     open($file, $variant_file) or die "Failed to open $variant_file";
     while (<$file>) {
-        my $line = $_;
-        chomp($line);
-        my $langcode = $line;
-        my $lang = $line;
+        chomp($_);
+        my $langcode = my $lang = $_;
         $langcode =~ s/([^:]*):*([^:]*)/$1/;
         $lang =~ s/([^:]*):*([^:]*)/$2/;
         if ($lang ne "") { $languages{$langcode} = $lang; }
@@ -79,14 +63,13 @@ if (defined($lpom_dir)) {
     close($file);
 }
 
-if (-e "$op_dir/locales.all") {
-    open($file, "$op_dir/locales.all");
+if (-e "debian/config/locales.all") {
+    open($file, "debian/config/locales.all");
     while (<$file>) {
-        if ((not $_ =~ /^$/) && (not $_ =~ /^#.*/)) {
-            my $line = $_;
-            chomp($line);
-            my $pkgname = $line;
-            my $lang = $line;
+        $_ =~ s/#.*//; s/\s*$//;
+        /^$/ || do {
+            chomp($_);
+            my $pkgname = my $lang = $_;
             $pkgname =~ s/([^:]*):*([^:]*)/$1/;
             $lang =~ s/([^:]*):*([^:]*)/$2/;
             $pkglist{$pkgname} = 1;
@@ -95,31 +78,32 @@ if (-e "$op_dir/locales.all") {
     }
 }
 
-if (-e "$op_dir/locales.shipped") {
-    open($file, "$op_dir/locales.shipped");
+if (-e "debian/config/locales.shipped") {
+    open($file, "debian/config/locales.shipped");
     while (<$file>) {
-        if ((not $_ =~ /^$/) && (not $_ =~ /^#.*/)) {
-            my $line = $_;
-            chomp($line);
-            my $langcode = $line;
-            my $pkgname = $line;
+        $_ =~ s/#.*//; s/\s*$//;
+        /^$/ || do {
+            chomp($_);
+            my $langcode = my $pkgname = $_;
             $langcode =~ s/([^:]*):*([^:]*)/$1/;
             $pkgname =~ s/([^:]*):*([^:]*)/$2/;
             if ($pkgname eq "") { die "Malformed locales.shipped file"; }
-            if (not exists $pkglist{$pkgname}) { die "WTF? Language in locales.shipped is not present in locales.all. Did we produce broken output last time?"; }
+            if (not exists $pkglist{$pkgname}) {
+                die "WTF? Language in locales.shipped is not present in locales.all. Did we produce broken output last time?";
+            }
             $locale2pkgname{lc($langcode)} = $pkgname;
         }
     }
     close($file);
 }
 
-if (defined($bl_file)) {
-    open($file, "$bl_file") or die "Failed to open $bl_file";
+if (-e "debian/config/locales.blacklist") {
+    open($file, "debian/config/locales.blacklist");
     while (<$file>) {
-        if ((not $_ =~ /^$/) && (not $_ =~ /^#.*/)) {
-            my $line = $_;
-            chomp($line);
-            $blacklist{$line} = 1;
+        $_ =~ s/#.*//; s/\s*$//;
+        /^$/ || do {
+            chomp($_);
+            $blacklist{$_} = 1;
         }
     }
     close($file);
@@ -128,15 +112,15 @@ if (defined($bl_file)) {
 my $have_language = 0;
 
 open($file, $moz_supported_file) or die "Failed to open $moz_supported_file";
-open(my $outfile, ">$op_dir/locales.shipped");
+open(my $outfile, ">debian/config/locales.shipped");
 while (<$file>) {
-    my $line = $_;
-    chomp($line);
-    my $langcode = $line;
-    my $platforms = $line;
+    chomp($_);
+    my $langcode = my $platforms = $_;
     $langcode =~ s/^([[:alnum:]\-]*)[[:space:]]*(.*)/$1/;
     $platforms =~ s/^([[:alnum:]\-]*)[[:space:]]*(.*)/$2/;
-    if (($langcode eq "en-US") || (($platforms ne "") && (rindex($platforms, "linux") eq -1)) || (exists $blacklist{$langcode})) { next; }
+    next if (($langcode eq "en-US") ||
+             (($platforms ne "") && (rindex($platforms, "linux") eq -1)) ||
+             (exists $blacklist{$langcode}));
     my $llangcode = lc($langcode);
     my $pkgname = $llangcode;
     if (exists $locale2pkgname{$llangcode}) { $pkgname = $locale2pkgname{$llangcode}; }
@@ -144,17 +128,21 @@ while (<$file>) {
         if ($pkgname eq $llangcode) { $pkgname =~ s/\-.*//; }
         if (not exists $languages{$pkgname}) { die "No description for $pkgname"; }
     }
-    if ($have_language eq 0) { print $outfile "# List of shipped locales. This list is automatically generated. Do not edit by hand\n"; }
+    if ($have_language eq 0) {
+        print $outfile "# List of shipped locales. This list is automatically generated. Do not edit by hand\n";
+    }
     $have_language = 1;
     print $outfile "$langcode:$pkgname\n";
     $pkglist{$pkgname} = 1;
 }
 
-if ($have_language eq 0) { print $outfile "# Placeholder file for the list of shipped languages. Do not delete"; }
+if ($have_language eq 0) {
+    print $outfile "# Placeholder file for the list of shipped languages. Do not delete";
+}
 close($file);
 close($outfile);
 
-open($outfile, ">$op_dir/locales.all");
+open($outfile, ">debian/config/locales.all");
 my @completelist = keys(%pkglist);
 if (scalar(@completelist) gt 0) {
     @completelist = sort(@completelist);
