@@ -1,4 +1,6 @@
-ak
-rm
-son
-ta-LK
+ak # Not supported on Ubuntu
+lij # Not supported on Ubuntu
+ff # Not supported on Ubuntu
+rm # Not supported on Ubuntu
+son # Not supported on Ubuntu
+ta-LK # Not supported on Ubuntu (but we keep ta)
